# is_instance

./: Makefile  README.md  pyproject.toml
src/is_instance/: __init__.py  main.py  slang.py
tests/: test_basic.py  test_collections.py  test_is_instance.py
