[project]
name = "is_instance"
version = "0.0.5"
authors = [
    { name="Jason Wilkes", email="notarealdeveloper@gmail.com" },
]
description = "A better isinstance for python"
dependencies = [
    "callable_module",
]

[project.optional-dependencies]
develop = [
    "build",
    "pytest",
]

[project.urls]
source = "https://github.com/notarealdeveloper/is_instance"
download = "https://pypi.org/project/is-instance/#files"
