[project]
name = "is_instance"
version = "0.0.12"
authors = [
    { name="Jason Wilkes", email="notarealdeveloper@gmail.com" },
    { name="Michael Chen", email="michael.chen@aicadium.ai" },
    { name="Hudson Cooper", email="hncooper96@gmail.com" },
]
description = "A better isinstance for python"
dependencies = [
    "callable_module",
]

[project.optional-dependencies]
develop = [
    "build",
    "pytest",
]

[project.urls]
source = "https://github.com/notarealdeveloper/is_instance"
download = "https://pypi.org/project/is-instance/#files"
